# NewsSage

./: .replit  README.md  app.py  article.html  pyproject.toml  requirements.txt
assets/: newsbot_mascot.py
utils/: article_extractor.py  export_utils.py  nlp_processor.py  translator.py
venv311/: pyvenv.cfg
venv311/Scripts/: activate  activate.bat
