[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "requests>=2.32.3",
    "spacy>=3.8.5",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
]
